--- a/src/containers/Login/styles.css
+++ b/src/containers/Login/styles.css
@@ -1,8 +1,6 @@
 .login_background{
     background-color: #5e9ca9;
     min-height: 100vh;
-    min-width: 100vw;
-    width: max-content;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,17 +15,40 @@
     margin-inline: 30px;
 }
 .login_form{
-    max-width: 240px;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto; */
+    /* margin-right: auto; */
     margin-bottom: 10px;
 }
 .login_image{
-    width: 50%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    /* width: 50%; */
+    /* height: 100%; */
+    /* display: flex !important; */
+    justify-content: center;
 }
-.login_image>img{
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
-    border-radius: 20px;
+
+
+@media screen and (max-width: 900px){
+    .login_image>img{
+        width: 100%;
+        height: 100%;
+        /* width: -webkit-fill-available; */
+        /* height: -webkit-fill-available; */
+        border-radius: 20px;
+    }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1200px){
+    .login_image>img{
+        width: 60% !important;
+    }
+    .login_wrapper{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .login_background{
+        /* width: 1000px !important; */
+    }
 }
