responsive register page

--- a/src/containers/Register/styles.css
+++ b/src/containers/Register/styles.css
@@ -1,6 +1,17 @@
 .login_form{
     width: 50%;
-    max-width: 240px;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+@media screen and (max-width: 900px){
+    .login_form{
+        width: 300px !important;
+    }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1200px){
+    .login_form{
+        width: 400px !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
 }
