--- a/src/containers/ForgotPassword/styles.css
+++ b/src/containers/ForgotPassword/styles.css
@@ -31,3 +31,10 @@
   height: -webkit-fill-available;
   border-radius: 20px;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 320px) {
+  .login_image,.login_image > img{
+    display: none;
+  }
+}
+
